--- a/treasury.html
+++ b/treasury.html
@@ -1,27 +1,27 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=650>
-<b><font size=6 color='white'><center>2017 Prizes</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2018 Prizes</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table border=2>
 <tr><td><b>Prize</b></td>
-    <td width=42><b>Randy</b></td>
-    <td width=42><b>Sam</b></td>
     <td width=42><b>States</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>John</b></td>
     <td width=42><b>Rich</b></td>
+    <td width=42><b>Roger</b></td>
+    <td width=42><b>Matthew</b></td>
     <td width=42><b>Steven</b></td>
+    <td width=42><b>Grant</b></td>
     <td width=42><b>Mike</b></td>
-    <td width=42><b>Roger</b></td></tr>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>John</b></td>
+    <td width=42><b>Sam</b></td></tr>
 <tr><td>Fantasy Bowl winner</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">$150</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td></tr>
@@ -29,29 +29,29 @@
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">$100</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td></tr>
+    <td align="right">0</td>
+    <td align="right">$100</td></tr>
 <tr><td>Make playoffs</td>
     <td align="right">0</td>
-    <td align="right">$50</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">$50</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">$50</td>
+    <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>Most points for year</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">$100</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -61,34 +61,34 @@
 <tr><td>2nd most points for year</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">$45</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>Highest score for week</td>
+    <td align="right">$45</td>
     <td align="right">0</td>
     <td align="right">$15</td>
-    <td align="right">$15</td>
-    <td align="right">$105</td>
-    <td align="right">$30</td>
-    <td align="right">$30</td>
-    <td align="right">0</td>
-    <td align="right">$30</td>
-    <td align="right">$15</td>
-    <td align="right">$15</td></tr>
-<tr><td>Total</td>
-    <td align="right">0</td>
-    <td align="right">$65</td>
-    <td align="right">$15</td>
-    <td align="right">$305</td>
-    <td align="right">$30</td>
-    <td align="right">$30</td>
-    <td align="right">$150</td>
     <td align="right">$75</td>
-    <td align="right">$65</td>
-    <td align="right">$15</td></tr>
+    <td align="right">$15</td>
+    <td align="right">$30</td>
+    <td align="right">$15</td>
+    <td align="right">$30</td>
+    <td align="right">0</td>
+    <td align="right">$30</td></tr>
+<tr><td>Total</td>
+    <td align="right">$295</td>
+    <td align="right">0</td>
+    <td align="right">$110</td>
+    <td align="right">$75</td>
+    <td align="right">$15</td>
+    <td align="right">$30</td>
+    <td align="right">$15</td>
+    <td align="right">$80</td>
+    <td align="right">0</td>
+    <td align="right">$130</td></tr>
 </table>
