--- a/playoff.html
+++ b/playoff.html
@@ -9,6 +9,12 @@
     <td><b>Semifinal</b></td>
     <td><b>Points Champion</td>
     <td><b>2nd Points</b></td></tr>
+<tr><td>2018</td>
+    <td>States(685)-Sam(480)</td>
+    <td>States(820)-Randy(785)</td>
+    <td>Sam(930)-Roger(740)</td>
+    <td>States (12770)</td>
+    <td>Roger (12175)</td></tr>
 <tr><td>2017</td>
     <td>Rich(485)-Grant(410)</td>
     <td>Rich(515)-Sam(490)</td>
