--- a/board13.html
+++ b/board13.html
@@ -24,7 +24,7 @@
     <td>Ray<br>Rice</td>
     <td>Marshawn<br>Lynch</td>
     <td>Matt<br>Forte</td>
-    <td>Alfred<br>Morris</td>
+    <td>Alfred<br>Morris</td></tr>
 <tr><td>2</td>
     <td>Stevan<br>Ridley</td>
     <td>AJ<br>Green</td>
@@ -35,7 +35,7 @@
     <td>Chris<br>Johnson</td>
     <td>Aaron<br>Rodgers</td>
     <td>LeSean<br>McCoy</td>
-    <td>Calvin<br>Johnson</td>
+    <td>Calvin<br>Johnson</td></tr>
 <tr><td>3</td>
     <td>Julio<br>Jones</td>
     <td>Demaryius<br>Thomas</td>
@@ -46,7 +46,7 @@
     <td>Andre<br>Johnson</td>
     <td>Frank<br>Gore</td>
     <td>Peyton<br>Manning</td>
-    <td>Caleb<br>Sturgis</td>
+    <td>Caleb<br>Sturgis</td></tr>
 <tr><td>4</td>
     <td>Giovani<br>Bernard</td>
     <td>Matt<br>Ryan</td>
@@ -57,7 +57,7 @@
     <td>DeSean<br>Jackson</td>
     <td>Eddie<br>Lacy</td>
     <td>Tavon<br>Austin</td>
-    <td>Randall<br>Cobb</td>
+    <td>Randall<br>Cobb</td></tr>
 <tr><td>5</td>
     <td>Victor<br>Cruz</td>
     <td>Geno<br>Smith</td>
@@ -68,7 +68,7 @@
     <td>Andrew<br>Luck</td>
     <td>Eric<br>Decker</td>
     <td>Darren<br>McFadden</td>
-    <td>Darren<br>Sproles</td>
+    <td>Darren<br>Sproles</td></tr>
 <tr><td>6</td>
     <td>Robert<br>Griffin</td>
     <td>Ryan<br>Mathews</td>
@@ -79,7 +79,7 @@
     <td>Vernon<br>Davis</td>
     <td>Colin<br>Kaepernick</td>
     <td>Vincent<br>Jackson</td>
-    <td>Tom<br>Brady</td>
+    <td>Tom<br>Brady</td></tr>
 <tr><td>7</td>
     <td>Tony<br>Gonzalez</td>
     <td>Dwayne<br>Bowe</td>
@@ -90,7 +90,7 @@
     <td>Kenbrell<br>Thompkins</td>
     <td>Reggie<br>Wayne</td>
     <td>Jared<br>Cook</td>
-    <td>Chris<br>Ivory</td>
+    <td>Chris<br>Ivory</td></tr>
 <tr><td>8</td>
     <td>DeAndre<br>Hopkins</td>
     <td>Ahmad<br>Bradshaw</td>
@@ -101,7 +101,7 @@
     <td>Christine<br>Michael</td>
     <td>Le'Veon<br>Bell</td>
     <td>Cecil<br>Shorts</td>
-    <td>Russell<br>Wilson</td>
+    <td>Russell<br>Wilson</td></tr>
 <tr><td>9</td>
     <td>Steve<br>Smith</td>
     <td>Jason<br>Witten</td>
@@ -112,7 +112,7 @@
     <td>Steve<br>Johnson</td>
     <td>Mike<br>Williams</td>
     <td>Antonio<br>Brown</td>
-    <td>Mike<br>Wallace</td>
+    <td>Mike<br>Wallace</td></tr>
 <tr><td>10</td>
     <td>Shane<br>Vereen</td>
     <td>Rashard<br>Mendenhall</td>
@@ -123,7 +123,7 @@
     <td>Isaac<br>Redman</td>
     <td>Ronnie<br>Hillman</td>
     <td>Josh<br>Gordon</td>
-    <td>Zac<br>Stacy</td>
+    <td>Zac<br>Stacy</td></tr>
 <tr><td>11</td>
     <td>Michael<br>Vick</td>
     <td>Stepfan<br>Taylor</td>
@@ -134,7 +134,7 @@
     <td>Sidney<br>Rice</td>
     <td>Robert<br>Woods</td>
     <td>Tyler<br>Eifert</td>
-    <td>Johnathan<br>Franklin</td>
+    <td>Johnathan<br>Franklin</td></tr>
 <tr><td>12</td>
     <td>Aaron<br>Dobson</td>
     <td>Kenny<br>Britt</td>
@@ -145,7 +145,7 @@
     <td>Anquan<br>Boldin</td>
     <td>Fred<br>Davis</td>
     <td>Andy<br>Dalton</td>
-    <td>Greg<br>Jennings</td>
+    <td>Greg<br>Jennings</td></tr>
 <tr><td>13</td>
     <td>Antonio<br>Gates</td>
     <td>Markus<br>Wheaton</td>
@@ -156,7 +156,7 @@
     <td>Daniel<br>Thomas</td>
     <td>Chris<br>Givens</td>
     <td>Joseph<br>Randle</td>
-    <td>Kyle<br>Rudolph</td>
+    <td>Kyle<br>Rudolph</td></tr>
 <tr><td>14</td>
     <td>Toby<br>Gerhart</td>
     <td>Justin<br>Blackmon</td>
@@ -167,7 +167,7 @@
     <td>Ben<br>Roethlisberger</td>
     <td>Zach<br>Ertz</td>
     <td>Blair<br>Walsh</td>
-    <td>Alshon<br>Jeffery</td>
+    <td>Alshon<br>Jeffery</td></tr>
 <tr><td>15</td>
     <td>Michael<br>Floyd</td>
     <td>Jay<br>Cutler</td>
@@ -178,7 +178,7 @@
     <td>Jermaine<br>Gresham</td>
     <td>Vick<br>Ballard</td>
     <td>Michael<br>Bush</td>
-    <td>Zach<br>Ramirez</td>
+    <td>Zach<br>Ramirez</td></tr>
 <tr><td>16</td>
     <td>Matt<br>Bryant</td>
     <td>Justin<br>Tucker</td>
@@ -189,7 +189,7 @@
     <td>Jonathan<br>Dwyer</td>
     <td>Phil<br>Dawson</td>
     <td>Greg<br>Zuerlein</td>
-    <td>Felix<br>Jones</td>
+    <td>Felix<br>Jones</td></tr>
 <tr><td>17</td>
     <td>Matt<br>Prater</td>
     <td>Randy<br>Bullock</td>
@@ -200,7 +200,7 @@
     <td>Adam<br>Vinatieri</td>
     <td>Steven<br>Hauschka</td>
     <td>Bilal<br>Powell</td>
-    <td>Garrett<br>Hartley</td>
+    <td>Garrett<br>Hartley</td></tr>
 <tr><td>18</td>
     <td>Pierre<br>Thomas</td>
     <td>Danny<br>Woodhead</td>
@@ -211,5 +211,5 @@
     <td>Alex<br>Henery</td>
     <td>Tyler<br>Wilson</td>
     <td>Keenan<br>Allen</td>
-    <td>Matt<br>Barkley</td>
+    <td>Matt<br>Barkley</td></tr>
 </table>
