--- a/board14.html
+++ b/board14.html
@@ -24,7 +24,7 @@
     <td>Jimmy<br>Graham</td>
     <td>Peyton<br>Manning</td>
     <td>Calvin<br>Johnson</td>
-    <td>Aaron<br>Rodgers</td>
+    <td>Aaron<br>Rodgers</td></tr>
 <tr><td>2</td>
     <td>Julio<br>Jones</td>
     <td>Jordy<br>Nelson</td>
@@ -35,7 +35,7 @@
     <td>Bishop<br>Sankey</td>
     <td>Antonio<br>Brown</td>
     <td>Drew<br>Brees</td>
-    <td>DeMarco<br>Murray</td>
+    <td>DeMarco<br>Murray</td></tr>
 <tr><td>3</td>
     <td>Brandon<br>Marshall</td>
     <td>Andre<br>Ellington</td>
@@ -46,7 +46,7 @@
     <td>Giovani<br>Bernard</td>
     <td>Arian<br>Foster</td>
     <td>Alshon<br>Jeffery</td>
-    <td>Keenan<br>Allen</td>
+    <td>Keenan<br>Allen</td></tr>
 <tr><td>4</td>
     <td>Matthew<br>Stafford</td>
     <td>Michael<br>Floyd</td>
@@ -57,7 +57,7 @@
     <td>Toby<br>Gerhart</td>
     <td>Le'Veon<br>Bell</td>
     <td>Zac<br>Stacy</td>
-    <td>Victor<br>Cruz</td>
+    <td>Victor<br>Cruz</td></tr>
 <tr><td>5</td>
     <td>Julius<br>Thomas</td>
     <td>Rob<br>Gronkowski</td>
@@ -68,7 +68,7 @@
     <td>Vincent<br>Jackson</td>
     <td>Mike<br>Evans</td>
     <td>Joique<br>Bell</td>
-    <td>Ryan<br>Mathews</td>
+    <td>Ryan<br>Mathews</td></tr>
 <tr><td>6</td>
     <td>Johnny<br>Manziel</td>
     <td>Blake<br>Bortles</td>
@@ -79,7 +79,7 @@
     <td>Tom<br>Brady</td>
     <td>Pierre<br>Garcon</td>
     <td>Shane<br>Vereen</td>
-    <td>Vernon<br>Davis</td>
+    <td>Vernon<br>Davis</td></tr>
 <tr><td>7</td>
     <td>Teddy<br>Bridgewater</td>
     <td>Tony<br>Romo</td>
@@ -90,7 +90,7 @@
     <td>Roddy<br>White</td>
     <td>Reggie<br>Bush</td>
     <td>Kelvin<br>Benjamin</td>
-    <td>Carlos<br>Hyde</td>
+    <td>Carlos<br>Hyde</td></tr>
 <tr><td>8</td>
     <td>Chris<br>Johnson</td>
     <td>DeSean<br>Jackson</td>
@@ -101,7 +101,7 @@
     <td>Jeremy<br>Hill</td>
     <td>Kyle<br>Rudolph</td>
     <td>Andre<br>Williams</td>
-    <td>TY<br>Hilton</td>
+    <td>TY<br>Hilton</td></tr>
 <tr><td>9</td>
     <td>Trent<br>Richardson</td>
     <td>Fred<br>Jackson</td>
@@ -112,7 +112,7 @@
     <td>Michael<br>Crabtree</td>
     <td>Emmanuel<br>Sanders</td>
     <td>Dennis<br>Pitta</td>
-    <td>Jordan<br>Matthews</td>
+    <td>Jordan<br>Matthews</td></tr>
 <tr><td>10</td>
     <td>Rueben<br>Randle</td>
     <td>Terrance<br>Williams</td>
@@ -123,7 +123,7 @@
     <td>Jay<br>Cutler</td>
     <td>Mike<br>Wallace</td>
     <td>Stevan<br>Ridley</td>
-    <td>Mark<br>Ingram</td>
+    <td>Mark<br>Ingram</td></tr>
 <tr><td>11</td>
     <td>Andy<br>Dalton</td>
     <td>Carson<br>Palmer</td>
@@ -134,7 +134,7 @@
     <td>Reggie<br>Wayne</td>
     <td>Philip<br>Rivers</td>
     <td>Bernard<br>Pierce</td>
-    <td>Russell<br>Wilson</td>
+    <td>Russell<br>Wilson</td></tr>
 <tr><td>12</td>
     <td>Eric<br>Decker</td>
     <td>DeAngelo<br>Williams</td>
@@ -145,7 +145,7 @@
     <td>Riley<br>Cooper</td>
     <td>Austin<br>Seferian-Jenkins</td>
     <td>Golden<br>Tate</td>
-    <td>Jason<br>Witten</td>
+    <td>Jason<br>Witten</td></tr>
 <tr><td>13</td>
     <td>Cody<br>Latimer</td>
     <td>John<br>Brown</td>
@@ -156,7 +156,7 @@
     <td>Lamar<br>Miller</td>
     <td>Alfred<br>Blue</td>
     <td>Wes<br>Welker</td>
-    <td>Davante<br>Adams</td>
+    <td>Davante<br>Adams</td></tr>
 <tr><td>14</td>
     <td>Cairo<br>Santos</td>
     <td>Jordan<br>Cameron</td>
@@ -167,7 +167,7 @@
     <td>Storm<br>Johnson</td>
     <td>Stephen<br>Gostkowski</td>
     <td>Cody<br>Parkey</td>
-    <td>Steven<br>Hauschka</td>
+    <td>Steven<br>Hauschka</td></tr>
 <tr><td>15</td>
     <td>Knile<br>Davis</td>
     <td>James<br>White</td>
@@ -178,7 +178,7 @@
     <td>Knowshon<br>Moreno</td>
     <td>Tavon<br>Austin</td>
     <td>Phil<br>Dawson</td>
-    <td>Ka'Deem<br>Carey</td>
+    <td>Ka'Deem<br>Carey</td></tr>
 <tr><td>16</td>
     <td>Blair<br>Walsh</td>
     <td>Chris<br>Boswell</td>
@@ -189,7 +189,7 @@
     <td>Mason<br>Crosby</td>
     <td>Darren<br>McFadden</td>
     <td>Ladarius<br>Green</td>
-    <td>Danny<br>Woodhead</td>
+    <td>Danny<br>Woodhead</td></tr>
 <tr><td>17</td>
     <td>Pierre<br>Thomas</td>
     <td>Dan<br>Carpenter</td>
@@ -200,7 +200,7 @@
     <td>Eric<br>Ebron</td>
     <td>DeAndre<br>Hopkins</td>
     <td>Matt<br>Bryant</td>
-    <td>Alex<br>Henery</td>
+    <td>Alex<br>Henery</td></tr>
 <tr><td>18</td>
     <td>Andre<br>Caldwell</td>
     <td>Aaron<br>Dobson</td>
@@ -211,5 +211,5 @@
     <td>Logan<br>Thomas</td>
     <td>LeGarrette<br>Blount</td>
     <td>Danny<br>Amendola</td>
-    <td>Donte<br>Moncrief</td>
+    <td>Donte<br>Moncrief</td></tr>
 </table>
