--- a/boards.html
+++ b/boards.html
@@ -10,7 +10,16 @@
 <a href="board16.html"><b>2016</b></a><br>
 <a href="board15.html"><b>2015</b></a><br>
 <a href="board14.html"><b>2014</b></a><br>
-<a href="board13.html"><b>2013</b></a>
+<a href="board13.html"><b>2013</b></a><br>
+<a href="board12.html"><b>2012</b></a><br>
+<a href="board11.html"><b>2011</b></a><br>
+<a href="board10.html"><b>2010</b></a><br>
+<a href="board09.html"><b>2009</b></a><br>
+<a href="board08.html"><b>2008</b></a><br>
+<a href="board07.html"><b>2007</b></a><br>
+<a href="board06.html"><b>2006</b></a><br>
+<a href="board05.html"><b>2005</b></a><br>
+<a href="board04.html"><b>2004</b></a>
 </td>
 </tr>
 </table>
