--- a/board19.html
+++ b/board19.html
@@ -15,201 +15,201 @@
     <td width=42><b>Rich</b></td>
     <td width=42><b>Mike</b></td></tr>
 <tr><td>1</td>
-    <td>Alvin<br>Kamara</td></tr>
-    <td>Saquon<br>Barkley</td></tr>
-    <td>Kyler<br>Murray</td></tr>
-    <td>Christian<br>McCaffrey</td></tr>
-    <td>Ezekiel<br>Elliott</td></tr>
-    <td>DeAndre<br>Hopkins</td></tr>
-    <td>James<br>Conner</td></tr>
-    <td>Davante<br>Adams</td></tr>
-    <td>Nick<br>Chubb</td></tr>
+    <td>Alvin<br>Kamara</td>
+    <td>Saquon<br>Barkley</td>
+    <td>Kyler<br>Murray</td>
+    <td>Christian<br>McCaffrey</td>
+    <td>Ezekiel<br>Elliott</td>
+    <td>DeAndre<br>Hopkins</td>
+    <td>James<br>Conner</td>
+    <td>Davante<br>Adams</td>
+    <td>Nick<br>Chubb</td>
     <td>David<br>Johnson</td></tr>
 <tr><td>2</td>
-    <td>Odell<br>Beckham</td></tr>
-    <td>Todd<br>Gurley</td></tr>
-    <td>Damien<br>Williams</td></tr>
-    <td>Dalvin<br>Cook</td></tr>
-    <td>David<br>Montgomery</td></tr>
-    <td>Tyreek<br>Hill</td></tr>
-    <td>Josh<br>Jacobs</td></tr>
-    <td>Le'Veon<br>Bell</td></tr>
-    <td>Joe<br>Mixon</td></tr>
+    <td>Odell<br>Beckham</td>
+    <td>Todd<br>Gurley</td>
+    <td>Damien<br>Williams</td>
+    <td>Dalvin<br>Cook</td>
+    <td>David<br>Montgomery</td>
+    <td>Tyreek<br>Hill</td>
+    <td>Josh<br>Jacobs</td>
+    <td>Le'Veon<br>Bell</td>
+    <td>Joe<br>Mixon</td>
     <td>Julio<br>Jones</td></tr>
 <tr><td>3</td>
-    <td>Patrick<br>Mahomes</td></tr>
-    <td>Michael<br>Thomas</td></tr>
-    <td>Kerryon<br>Johnson</td></tr>
-    <td>Travis<br>Kelce</td></tr>
-    <td>JuJu<br>Smith-Schuster</td></tr>
-    <td>Leonard<br>Fournette</td></tr>
-    <td>Mike<br>Evans</td></tr>
-    <td>Devonta<br>Freeman</td></tr>
-    <td>Brandin<br>Cooks</td></tr>
+    <td>Patrick<br>Mahomes</td>
+    <td>Michael<br>Thomas</td>
+    <td>Kerryon<br>Johnson</td>
+    <td>Travis<br>Kelce</td>
+    <td>JuJu<br>Smith-Schuster</td>
+    <td>Leonard<br>Fournette</td>
+    <td>Mike<br>Evans</td>
+    <td>Devonta<br>Freeman</td>
+    <td>Brandin<br>Cooks</td>
     <td>Deshaun<br>Watson</td></tr>
 <tr><td>4</td>
-    <td>Aaron<br>Jones</td></tr>
-    <td>Sony<br>Michel</td></tr>
-    <td>Stefon<br>Diggs</td></tr>
-    <td>Keenan<br>Allen</td></tr>
-    <td>Antonio<br>Brown</td></tr>
-    <td>Chris<br>Carson</td></tr>
-    <td>Adam<br>Thielen</td></tr>
-    <td>Austin<br>Seibert</td></tr>
-    <td>Mike<br>Williams</td></tr>
+    <td>Aaron<br>Jones</td>
+    <td>Sony<br>Michel</td>
+    <td>Stefon<br>Diggs</td>
+    <td>Keenan<br>Allen</td>
+    <td>Antonio<br>Brown</td>
+    <td>Chris<br>Carson</td>
+    <td>Adam<br>Thielen</td>
+    <td>Austin<br>Seibert</td>
+    <td>Mike<br>Williams</td>
     <td>Miles<br>Sanders</td></tr>
 <tr><td>5</td>
-    <td>Marlon<br>Mack</td></tr>
-    <td>Dwayne<br>Haskins</td></tr>
-    <td>Zach<br>Ertz</td></tr>
-    <td>Matt<br>Gay</td></tr>
-    <td>Melvin<br>Gordon</td></tr>
-    <td>Aaron<br>Rodgers</td></tr>
-    <td>George<br>Kittle</td></tr>
-    <td>Mark<br>Ingram</td></tr>
-    <td>Matt<br>Ryan</td></tr>
+    <td>Marlon<br>Mack</td>
+    <td>Dwayne<br>Haskins</td>
+    <td>Zach<br>Ertz</td>
+    <td>Matt<br>Gay</td>
+    <td>Melvin<br>Gordon</td>
+    <td>Aaron<br>Rodgers</td>
+    <td>George<br>Kittle</td>
+    <td>Mark<br>Ingram</td>
+    <td>Matt<br>Ryan</td>
     <td>Derrick<br>Henry</td></tr>
 <tr><td>6</td>
-    <td>DJ<br>Moore</td></tr>
-    <td>TY<br>Hilton</td></tr>
-    <td>Calvin<br>Ridley</td></tr>
-    <td>Phillip<br>Lindsay</td></tr>
-    <td>Tevin<br>Coleman</td></tr>
-    <td>OJ<br>Howard</td></tr>
-    <td>Tony<br>Pollard</td></tr>
-    <td>Tyler<br>Lockett</td></tr>
-    <td>Jared<br>Cook</td></tr>
+    <td>DJ<br>Moore</td>
+    <td>TY<br>Hilton</td>
+    <td>Calvin<br>Ridley</td>
+    <td>Phillip<br>Lindsay</td>
+    <td>Tevin<br>Coleman</td>
+    <td>OJ<br>Howard</td>
+    <td>Tony<br>Pollard</td>
+    <td>Tyler<br>Lockett</td>
+    <td>Jared<br>Cook</td>
     <td>Amari<br>Cooper</td></tr>
 <tr><td>7</td>
-    <td>Tyler<br>Boyd</td></tr>
-    <td>Carson<br>Wentz</td></tr>
-    <td>Austin<br>Ekeler</td></tr>
-    <td>Robert<br>Woods</td></tr>
-    <td>Julian<br>Edelman</td></tr>
-    <td>Darrell<br>Henderson</td></tr>
-    <td>Duke<br>Johnson</td></tr>
-    <td>Evan<br>Engram</td></tr>
-    <td>Chris<br>Godwin</td></tr>
+    <td>Tyler<br>Boyd</td>
+    <td>Carson<br>Wentz</td>
+    <td>Austin<br>Ekeler</td>
+    <td>Robert<br>Woods</td>
+    <td>Julian<br>Edelman</td>
+    <td>Darrell<br>Henderson</td>
+    <td>Duke<br>Johnson</td>
+    <td>Evan<br>Engram</td>
+    <td>Chris<br>Godwin</td>
     <td>Greg<br>Olsen</td></tr>
 <tr><td>8</td>
-    <td>Derrius<br>Guice</td></tr>
-    <td>Kenny<br>Golladay</td></tr>
-    <td>Alexander<br>Mattison</td></tr>
-    <td>Kenyan<br>Drake</td></tr>
-    <td>Jared<br>Goff</td></tr>
-    <td>Baker<br>Mayfield</td></tr>
-    <td>James<br>White</td></tr>
-    <td>Darwin<br>Thompson</td></tr>
-    <td>Devin<br>Singletary</td></tr>
+    <td>Derrius<br>Guice</td>
+    <td>Kenny<br>Golladay</td>
+    <td>Alexander<br>Mattison</td>
+    <td>Kenyan<br>Drake</td>
+    <td>Jared<br>Goff</td>
+    <td>Baker<br>Mayfield</td>
+    <td>James<br>White</td>
+    <td>Darwin<br>Thompson</td>
+    <td>Devin<br>Singletary</td>
     <td>Sammy<br>Watkins</td></tr>
 <tr><td>9</td>
-    <td>Josh<br>Gordon</td></tr>
-    <td>Hunter<br>Henry</td></tr>
-    <td>Drew<br>Brees</td></tr>
-    <td>Cooper<br>Kupp</td></tr>
-    <td>Latavius<br>Murray</td></tr>
-    <td>DK<br>Metcalf</td></tr>
-    <td>Alshon<br>Jeffery</td></tr>
-    <td>Daniel<br>Jones</td></tr>
-    <td>Marquise<br>Brown</td></tr>
+    <td>Josh<br>Gordon</td>
+    <td>Hunter<br>Henry</td>
+    <td>Drew<br>Brees</td>
+    <td>Cooper<br>Kupp</td>
+    <td>Latavius<br>Murray</td>
+    <td>DK<br>Metcalf</td>
+    <td>Alshon<br>Jeffery</td>
+    <td>Daniel<br>Jones</td>
+    <td>Marquise<br>Brown</td>
     <td>AJ<br>Green</td></tr>
 <tr><td>10</td>
-    <td>TJ<br>Hockenson</td></tr>
-    <td>Royce<br>Freeman</td></tr>
-    <td>Michael<br>Gallup</td></tr>
-    <td>Justice<br>Hill</td></tr>
-    <td>David<br>Njoku</td></tr>
-    <td>N'Keal<br>Harry</td></tr>
-    <td>Russell<br>Wilson</td></tr>
-    <td>Rashaad<br>Penny</td></tr>
-    <td>Mecole<br>Hardman</td></tr>
+    <td>TJ<br>Hockenson</td>
+    <td>Royce<br>Freeman</td>
+    <td>Michael<br>Gallup</td>
+    <td>Justice<br>Hill</td>
+    <td>David<br>Njoku</td>
+    <td>N'Keal<br>Harry</td>
+    <td>Russell<br>Wilson</td>
+    <td>Rashaad<br>Penny</td>
+    <td>Mecole<br>Hardman</td>
     <td>Kareem<br>Hunt</td></tr>
 <tr><td>11</td>
-    <td>Noah<br>Fant</td></tr>
-    <td>Joey<br>Slye</td></tr>
-    <td>Lamar<br>Jackson</td></tr>
-    <td>Cam<br>Newton</td></tr>
-    <td>Deebo<br>Samuel</td></tr>
-    <td>Damien<br>Harris</td></tr>
-    <td>Philip<br>Rivers</td></tr>
-    <td>Jameis<br>Winston</td></tr>
-    <td>Jordan<br>Howard</td></tr>
+    <td>Noah<br>Fant</td>
+    <td>Joey<br>Slye</td>
+    <td>Lamar<br>Jackson</td>
+    <td>Cam<br>Newton</td>
+    <td>Deebo<br>Samuel</td>
+    <td>Damien<br>Harris</td>
+    <td>Philip<br>Rivers</td>
+    <td>Jameis<br>Winston</td>
+    <td>Jordan<br>Howard</td>
     <td>LeSean<br>McCoy</td></tr>
 <tr><td>12</td>
-    <td>Miles<br>Boykin</td></tr>
-    <td>Tom<br>Brady</td></tr>
-    <td>Justin<br>Tucker</td></tr>
-    <td>Tarik<br>Cohen</td></tr>
-    <td>Ben<br>Roethlisberger</td></tr>
-    <td>Allen<br>Robinson</td></tr>
-    <td>Sterling<br>Shepard</td></tr>
-    <td>Robby<br>Anderson</td></tr>
-    <td>Andy<br>Isabella</td></tr>
+    <td>Miles<br>Boykin</td>
+    <td>Tom<br>Brady</td>
+    <td>Justin<br>Tucker</td>
+    <td>Tarik<br>Cohen</td>
+    <td>Ben<br>Roethlisberger</td>
+    <td>Allen<br>Robinson</td>
+    <td>Sterling<br>Shepard</td>
+    <td>Robby<br>Anderson</td>
+    <td>Andy<br>Isabella</td>
     <td>Damion<br>Willis</td></tr>
 <tr><td>13</td>
-    <td>Jakobi<br>Meyers</td></tr>
-    <td>Courtland<br>Sutton</td></tr>
-    <td>Dante<br>Pettis</td></tr>
-    <td>Mark<br>Andrews</td></tr>
-    <td>Adrian<br>Peterson</td></tr>
-    <td>Justin<br>Jackson</td></tr>
-    <td>Dede<br>Westbrook</td></tr>
-    <td>Matt<br>Breida</td></tr>
-    <td>Kyle<br>Rudolph</td></tr>
+    <td>Jakobi<br>Meyers</td>
+    <td>Courtland<br>Sutton</td>
+    <td>Dante<br>Pettis</td>
+    <td>Mark<br>Andrews</td>
+    <td>Adrian<br>Peterson</td>
+    <td>Justin<br>Jackson</td>
+    <td>Dede<br>Westbrook</td>
+    <td>Matt<br>Breida</td>
+    <td>Kyle<br>Rudolph</td>
     <td>Peyton<br>Barber</td></tr>
 <tr><td>14</td>
-    <td>Hunter<br>Renfrow</td></tr>
-    <td>AJ<br>Brown</td></tr>
-    <td>Ty<br>Johnson</td></tr>
-    <td>Mitch<br>Trubisky</td></tr>
-    <td>Jarvis<br>Landry</td></tr>
-    <td>Kalen<br>Ballage</td></tr>
-    <td>Jaylen<br>Samuels</td></tr>
-    <td>Christian<br>Kirk</td></tr>
-    <td>Terry<br>McLaurin</td></tr>
+    <td>Hunter<br>Renfrow</td>
+    <td>AJ<br>Brown</td>
+    <td>Ty<br>Johnson</td>
+    <td>Mitch<br>Trubisky</td>
+    <td>Jarvis<br>Landry</td>
+    <td>Kalen<br>Ballage</td>
+    <td>Jaylen<br>Samuels</td>
+    <td>Christian<br>Kirk</td>
+    <td>Terry<br>McLaurin</td>
     <td>Jordan<br>Reed</td></tr>
 <tr><td>15</td>
-    <td>Austin<br>Hooper</td></tr>
-    <td>Will<br>Grier</td></tr>
-    <td>Ryan<br>Finley</td></tr>
-    <td>Will<br>Fuller</td></tr>
-    <td>Parris<br>Campbell</td></tr>
-    <td>Curtis<br>Samuel</td></tr>
-    <td>Jesse<br>James</td></tr>
-    <td>Vance<br>McDonald</td></tr>
-    <td>Greg<br>Zuerlein</td></tr>
+    <td>Austin<br>Hooper</td>
+    <td>Will<br>Grier</td>
+    <td>Ryan<br>Finley</td>
+    <td>Will<br>Fuller</td>
+    <td>Parris<br>Campbell</td>
+    <td>Curtis<br>Samuel</td>
+    <td>Jesse<br>James</td>
+    <td>Vance<br>McDonald</td>
+    <td>Greg<br>Zuerlein</td>
     <td>Josh<br>Allen</td></tr>
 <tr><td>16</td>
-    <td>Dion<br>Lewis</td></tr>
-    <td>Marquez<br>ValdesScantling</td></tr>
-    <td>Matt<br>LaCosse</td></tr>
-    <td>Corey<br>Davis</td></tr>
-    <td>Ka'imi<br>Fairbairn</td></tr>
-    <td>Matthew<br>Wright</td></tr>
-    <td>Ryquell<br>Armstead</td></tr>
-    <td>Ito<br>Smith</td></tr>
-    <td>Dak<br>Prescott</td></tr>
+    <td>Dion<br>Lewis</td>
+    <td>Marquez<br>ValdesScantling</td>
+    <td>Matt<br>LaCosse</td>
+    <td>Corey<br>Davis</td>
+    <td>Ka'imi<br>Fairbairn</td>
+    <td>Matthew<br>Wright</td>
+    <td>Ryquell<br>Armstead</td>
+    <td>Ito<br>Smith</td>
+    <td>Dak<br>Prescott</td>
     <td>Drew<br>Lock</td></tr>
 <tr><td>17</td>
-    <td>Steven<br>Hauschka</td></tr>
-    <td>Harrison<br>Butker</td></tr>
-    <td>Qadree<br>Ollison</td></tr>
-    <td>Wil<br>Lutz</td></tr>
-    <td>CJ<br>Anderson</td></tr>
-    <td>Delanie<br>Walker</td></tr>
-    <td>Aldrick<br>Rosas</td></tr>
-    <td>Stephen<br>Gostkowski</td></tr>
-    <td>Jason<br>Myers</td></tr>
+    <td>Steven<br>Hauschka</td>
+    <td>Harrison<br>Butker</td>
+    <td>Qadree<br>Ollison</td>
+    <td>Wil<br>Lutz</td>
+    <td>CJ<br>Anderson</td>
+    <td>Delanie<br>Walker</td>
+    <td>Aldrick<br>Rosas</td>
+    <td>Stephen<br>Gostkowski</td>
+    <td>Jason<br>Myers</td>
     <td>Mason<br>Crosby</td></tr>
 <tr><td>18</td>
-    <td>Tristan<br>Vizcaino</td></tr>
-    <td>Jimmy<br>Graham</td></tr>
-    <td>Larry<br>Fitzgerald</td></tr>
-    <td>Kirk<br>Cousins</td></tr>
-    <td>Eric<br>Ebron</td></tr>
-    <td>Robbie<br>Gould</td></tr>
-    <td>Jake<br>Elliott</td></tr>
-    <td>Sam<br>Darnold</td></tr>
-    <td>John<br>Brown</td></tr>
+    <td>Tristan<br>Vizcaino</td>
+    <td>Jimmy<br>Graham</td>
+    <td>Larry<br>Fitzgerald</td>
+    <td>Kirk<br>Cousins</td>
+    <td>Eric<br>Ebron</td>
+    <td>Robbie<br>Gould</td>
+    <td>Jake<br>Elliott</td>
+    <td>Sam<br>Darnold</td>
+    <td>John<br>Brown</td>
     <td>Jerick<br>McKinnon</td></tr>
 </table>
